--- a/protocols.ini
+++ b/protocols.ini
@@ -572,14 +572,29 @@ CmdParms=OBC=0
 DevParms=Device Number:4=12,Parm:4:$=3
 DeviceTranslator=Translator(0,4) Translator(1,4,4)
 FixedData=C3
-Notes=The Parm value selects between three different frequencies and two different lead-out values.\n\
-To compute Parm, select one of 0, 2 or 4 for frequency and one of 0 or 1 for lead-out and add those two numbers together:\n\
-frequency 0 = 40Khz\n\
-frequency 2 = 38Khz\n\
-frequency 4 = 57Khz\n\
-lead-out 0 = 9ms\n\
-lead-out 1 = 30ms\n\
-For example, the default Parm value 3 is frequency 2 (38Khz) and lead-out 1 (30ms)
+Notes=<b></b>The Device Number selects between eight different receiver addresses:\
+<table cellspacing="4">\
+<tr align="center"><th align="left">Receiver Address:</td><td>1</td><td>2</td><td>3</td><td>4</td><td>5</td><td>6</td><td>7</td><td>8</td></tr>\
+<tr align="center"><th align="left">Device Number:</td><td>12</td><td>13</td><td>2</td><td>3</td><td>8</td><td>9</td><td>1</td><td>0</td></tr>\
+</table>\
+<p>The default Receiver Address is 1.</p>\
+<p>The Parm value selects between three different frequencies and two different lead-out values. \
+To compute Parm, select one of 0, 2 or 4 for frequency and one of 0 or 1 for lead-out and add those two numbers together:</p>\
+<table width="50%"><tr valign="top"><td>\
+<table>\
+<tr><th>Value</th><th>Frequency</th></tr>\
+<tr align="center"><td>0</td><td>40Khz</td></tr>\
+<tr align="center"><td>2</td><td>38Khz</td></tr>\
+<tr align="center"><td>4</td><td>57Khz</td></tr>\
+</table>\
+</td><td>\
+<table>\
+<tr><th>Value</th><th>Lead Out</th></tr>\
+<tr align="center"><td>0</td><td>9ms</td></tr>\
+<tr align="center"><td>1</td><td>30ms</td></tr>\
+</table>\
+</td></tr></table>\
+<p>For example, the default Parm value 3 is frequency 2 (38Khz) and lead-out 1 (30ms)</p></html>
 Code.S3C80=40 84 11 8B 15 00 01 2C 01 18 01 2C 02 44 02 58 01 18 02 58 02 44 0B B8 02 44 B0 0C 68 03 37 64 0B E6 0E 2C E6 0F 5D F6 01 55 8B 0C 37 62 09 E6 0E 43 E6 0F 8A F6 01 55 F6 FF 91 1C 22 F6 01 4C 38 03 F6 FF 7A 38 04 F6 FF 76 38 05 F6 FF 7A 1C 12 F6 01 64 37 60 07 C6 F8 29 04 F6 01 58 C6 F8 11 94 F6 01 58 76 0C 01 EB 06 C6 22 05 DC 20 0C F6 01 0A 7B C6 AF 4C 04 8B 02 4C 02 90 C3 90 C3 08 C3 56 C0 03 86 04 C0 06 C1 12 F6 01 4C 4A EC AF C6 08 01 03 C6 0A 05 07 B0 C0 B0 C2 38 04 48 C3 56 C4 03 87 50 08 02 24 5A FC E0 C3 E0 C3 0E 37 04 EC F0 C2 29 05 AF
 Code.HCS08= 20 06 17 2F 11 08 0B B8 04 60 0E 45 23 46 02 60 \
             03 45 21 43 35 A7 CD FF 6E 4F BE 61 3A A2 58 24 \
@@ -683,6 +698,68 @@ Code.HCS08=20 17 17 2F 51 B6 59 05 06 00 C4 03 46 00 C4 05 \
 PID=00 02
 Variant Name=5
 AlternatePID=01 E2
+DevParms=Device 1:5=0,Device 2:5=1,Device 3:5=0,Device 4:5=0,Remote Address (1 to 32) :5=0,Duration:7=2
+DeviceTranslator=Translator(lsb,0,5,8) Translator(lsb,1,5,16) Translator(lsb,2,5,24) Translator(lsb,3,5,32) Translator(lsb,4,5,0,0,-1)
+DeviceImporter=ReorderImporter(4,0,1,2,3)
+CodeTranslator.S3C80=Translator(5,7,193)
+CodeTranslator.6805-RC16/18=Translator(5,7,177)
+CodeTranslator.HCS08=Translator(5,7,193)
+CmdParms=Device:0|1|2|3,OBC:6=0
+CmdParmInit=PickInitializer(0,0,1,n2,n3)
+CmdTranslator=Translator(1,6) Translator(0,2,6)
+Notes=\
+    Changing the duration requires re-importing the protocol upgrade code, not just the device upgrade code\n\n\
+    This protocol has a minimum of 5 repeats in macros that significantly improves recognition accuracy in some models.\n\n\
+    This is the protocol to use for the PVR 721 and 921 and certain others that need a different device number for certain commands.\
+    Here are the known commands for all Dish/Dishplayers:\n\n\
+      device=0 OBC=00   Info\n\
+      device=0 OBC=01   Discrete On in some models\n\
+      device=0 OBC=02   Power\n\
+      device=0 OBC=04   1\n\
+      device=0 OBC=05   2\n\
+      device=0 OBC=06   3\n\
+      device=0 OBC=08   4\n\
+      device=0 OBC=09   5\n\
+      device=0 OBC=10   6\n\
+      device=0 OBC=11   Menu\n\
+      device=0 OBC=12   7\n\
+      device=0 OBC=13   8\n\
+      device=0 OBC=14   9\n\
+      device=0 OBC=16   Select\n\
+      device=0 OBC=17   0\n\
+      device=0 OBC=18   Cancel\n\
+      device=0 OBC=20   Guide\n\
+      device=0 OBC=22   View\n\
+      device=0 OBC=23   TV/VCR or SD/HD\n\
+      device=0 OBC=24   Right/Browse\n\
+      device=0 OBC=26   Up\n\
+      device=0 OBC=27   Recall\n\
+      device=0 OBC=28   Left/Theme\n\
+      device=0 OBC=30   Down\n\
+      device=0 OBC=31   Record\n\
+      device=0 OBC=32   Pause\n\
+      device=0 OBC=33   Stop\n\
+      device=0 OBC=36   System Info\n\
+      device=0 OBC=37   * (Asterisk)\n\
+      device=0 OBC=38   # (Search)\n\
+      device=0 OBC=39   Discrete Off in some models\n\
+      device=1 OBC=03   Play/Back\n\
+      device=1 OBC=07   Page Down\n\
+      device=1 OBC=15   Page Up\n\
+      device=1 OBC=49   REW\n\
+      device=1 OBC=50   FFWD\n\
+      device=1 OBC=54   Skip Ahead\n\
+      device=1 OBC=55   Skip/Menu\n\
+      device=1 OBC=57   PVR/PTV
+FixedData=00 00 00 00 00
+Code.S3C80=2B 5C 51 8B 14 B6 59 05 06 00 C5 03 32 00 C5 05 73 0B F2 00 C5 0B F2 05 02 18 08 56 C1 03 87 21 04 29 04 8D 01 46 
+Code.6805-RC16/18=0B 18 51 20 12 B6 59 05 06 01 62 A4 02 62 C4 06 03 00 06 62 04 05 02 B6 5F A4 03 97 E6 5B B7 5B CC 01 AF
+Code.HCS08=20 17 17 2F 51 B6 59 05 06 00 C4 03 46 00 C4 05 87 0C 06 00 C4 0C 06 05 02 B6 65 A4 03 97 8C E6 61 B7 61 CC FF 5F
+
+[Dish Network Combo]
+PID=00 02
+Variant Name=5
+AlternatePID=01 E2
 DevParms=Device 1:5=0,Device 2:5=1,Device 3:5=0,Device 4:5=0,Remote Address (1 to 32) :5=0
 DeviceTranslator=Translator(lsb,0,5,8) Translator(lsb,1,5,16) Translator(lsb,2,5,24) Translator(lsb,3,5,32) Translator(lsb,4,5,0,0,-1)
 DeviceImporter=ReorderImporter(4,0,1,2,3)
@@ -732,10 +809,8 @@ Notes=This protocol has a minimum of 5 repeats in macros that significantly  imp
       device=1 OBC=55   Skip/Menu\n\
       device=1 OBC=57   PVR/PTV
 FixedData=00 00 00 00 00
-Code.S3C80=2B 5C 51 8B 16 B6 59 05 06 00 C5 03 32 00 C5 05 73 0B F2 00 C5 0B F2 05 02 43 8C 18  08 56 C1 03 87 21 04 29 04 8D 01 46
 Code.740=06 0D 51 80 10 B8 70 17 05 06 03 18 04 97 06 9C 17 08 F0 01 05 E6 5C 44 5D A5 62 29 03 AA B5 5E 85 5E 20 00 FF 3C 62 7F 4C 00 FF
 Code.6805-C9=06 0E 51 20 11 B8 F0 00 17 05 06 03 19 04 9A 07 01 17 08 F4 01 05 3C 59 33 5A B6 5F A4 03 97 E6 5B B7 5B AD 04 A6 E2 B7 7C CC 01 83
-Code.6805-RC16/18=0B 18 51 20 12 B6 59 05 06 01 62 A4 02 62 C4 06 03 00 06 62 04 05 02 B6 5F A4 03 97 E6 5B B7 5B CC 01 AF
 
 [Dreambox]
 PID=01 6C
@@ -1153,9 +1228,9 @@ Windows registry change that disables debounce (to work with learned signals in 
 toggle bit isn't active).  The RC6 toggle bit is a different bit than the MCE toggle bit. \
 The RC6 toggle bit is always zero in MCE signals.
 
-[MZC-88] 
-PID=01 55 
-Code.S3C80=42 8E 04 8B 12 CC 45 00 08 01 16 01 06 01 16 03 31 D2 F0 11 A6 08 B7 08 03 F6 FF 36 09 03 08 04 F6 FF 36 09 04 08 05 F6 FF 36 09 05 08 06 F6 FF 36 09 06 8D 01 46 60 C0 1C 08 C0 C0 10 07 1A FA 08 07 AF 
+[MZC-88]
+PID=01 55
+Code.S3C80=42 8E 04 8B 12 CC 45 00 08 01 16 01 06 01 16 03 31 D2 F0 11 A6 08 B7 08 03 F6 FF 36 09 03 08 04 F6 FF 36 09 04 08 05 F6 FF 36 09 05 08 06 F6 FF 36 09 06 8D 01 46 60 C0 1C 08 C0 C0 10 07 1A FA 08 07 AF
 Code.HCS08=20 15 22 48 04 CC 45 00 08 01 16 01 1A 01 16 03 45 D2 F0 11 A6 08 CB B6 60 AD 17 B7 60 B6 61 AD 11 B7 61 B6 62 AD 0B B7 62 B6 63 AD 05 B7 63 CC FF 5F 43 AE 08 44 39 64 5B FB B6 64 81
 
 [Mitsubishi]
@@ -1827,6 +1902,46 @@ Copy and Paste the Protocol and Device upgrades into IR.  For the Device upgrade
 \n\
 It's OK, you need to do this only temporarily.  Select any device button you want.  What you really want is to import the keymoves, and then once they are in IR's Keymove tab, you can re-edit those Pause keymoves to any other button in any other device you want.  The key is to use the same Device for the source of the Keymove.
 
+[Pause Protocol (Extender)]
+PID=01 FB
+VariantName=Extender
+KeyMovesOnly=1
+CmdParms=Duration:8=0
+CmdTranslator=Translator()
+Code.S3C80=00 00 01 28 03 8D 15 30 
+Notes=This protocol allows you to insert a variable length pause inside \
+a macro.  To use this protocol, you have to install both the Device \
+Upgrade and the Protocol Upgrade.\
+\n\n\
+Typically, you would assign an Duration to a phantom key that you will \
+use in a macro to insert pauses.\
+\n\n\
+The length of the pause depends upon the "Duration" (OBC) code.\n\
+1 = shortest, 255=longest (in some cases, 0=longest)\
+\n\n\
+The actual delay time will vary among different remotes, but the \
+values shown below will serve as a guideline for most \
+processors.\
+\n\n\
+\tDuration = (seconds to pause) x (16)\n\
+\t016  =  approx 1 second\n\
+\t032  =  approx 2 seconds\n\
+\t048  =  approx 3 seconds\n\
+\t064  =  approx 4 seconds\n\
+\t080  =  approx 5 seconds\n\
+\t160  =  approx 10 seconds\n\n\
+(note: For S3C8 processors:  Duration (OBC) = (seconds to pause) x (10.66)) \n\n\
+To set this up, select the Remote, Device Type, and Setup Code on the 'Setup' sheet.\n\n\
+On the 'Functions' sheet, enter function names like \n\
+  '1 second pause' \n\
+  '2 second pause' \n\
+and enter the appropriate Duration (OBC) value. \n\n\
+On the "Buttons" or "Layout" sheet, for each desired pause function, assign it to a button that requires a Keymove (if not, then you would either have to assign it to occupy a device slot in your remote, or manually create the keymove in IR. \n\n\
+Copy and Paste the Protocol and Device upgrades into IR.  For the Device upgrade, IR will prompt you to assign it to a device button, otherwise the Keymoves won't work. \
+\n\
+It's OK, you need to do this only temporarily.  Select any device button you want.  What you really want is to import the keymoves, and then once they are in IR's Keymove tab, you can re-edit those Pause keymoves to any other button in any other device you want.  The key is to use the same Device for the source of the Keymove.
+
+
 [pid-0001]
 PID=00 01
 CmdParms=OBC:5=0
@@ -1931,7 +2046,7 @@ Code.6805-RC16/18=10 22 42 20 10 E5 44 08 08 00 84 84 01 84 90 59 \
                  _7C CC 01 AF 3F 58 BE 5E B6 5B BF 53 B7 5E CD 01 \
                   AF A6 02 B7 58 BE 53 BF 5E CD 01 AF CD 01 89 24 \
                   E3 81
-Code.HCS08=20 15 21 43 62 A5 44 08 08 01 11 01 09 01 11 03 20 31 8A 10 A5 08 4E 8C BE 67 54 E6 61 B7 61 00 67 05 10 A3 CC FF 5F 3F AC 6E 01 A9 AD F6 6E 05 AC 6E 06 A9 AD EE CD FF 92 25 EC 81                  
+Code.HCS08=20 15 21 43 62 A5 44 08 08 01 11 01 09 01 11 03 20 31 8A 10 A5 08 4E 8C BE 67 54 E6 61 B7 61 00 67 05 10 A3 CC FF 5F 3F AC 6E 01 A9 AD F6 6E 05 AC 6E 06 A9 AD EE CD FF 92 25 EC 81
 
 [Pioneer DVD2]
 PID=00 7E
@@ -2308,7 +2423,7 @@ Code.S3C80=47 93 82 8B 16 88 81 10 08 08 01 BC 01 A8 01 BC 01 A8 AB CC 05 35 01 
            0A E3 50 D7 25 2E 4A F9 68 0C 56 C6 06 87 06 05 87 16 06 09 05 19 06 E4 0B 07 68 07 2C 08 CF 10 \
            08 10 07 DF 10 08 10 07 90 C6 FB 03 B6 08 03 2A ED 76 00 01 6B 03 B6 04 F0 E6 10 02 E6 11 04 8D \
            01 49 00 DE 00 00 00 00 00 CC A3 91
-Code.HCS08=20 23 24 4B 82 88 81 10 08 08 01 BB 01 BC 01 BB 01 BC AB E0 05 34 01 BC 04 00 06 00 DD 00 00 00 00 00 DE A3 A5 00 69 0C B6 68 01 B3 04 A8 20 B7 68 CC FF 5F 6E 8E A2 6E 05 A3 3F A4 45 00 0A E6 7C E7 6B 5B FA B6 69 A4 06 97 E6 62 B7 62 E6 63 B7 63 4E 68 64 B6 64 AE 08 CD FF 8C BF 64 B7 65 B6 61 01 B3 04 A8 F0 B7 61 6E 02 A9 6E 04 AA CC FF 5F           
+Code.HCS08=20 23 24 4B 82 88 81 10 08 08 01 BB 01 BC 01 BB 01 BC AB E0 05 34 01 BC 04 00 06 00 DD 00 00 00 00 00 DE A3 A5 00 69 0C B6 68 01 B3 04 A8 20 B7 68 CC FF 5F 6E 8E A2 6E 05 A3 3F A4 45 00 0A E6 7C E7 6B 5B FA B6 69 A4 06 97 E6 62 B7 62 E6 63 B7 63 4E 68 64 B6 64 AE 08 CD FF 8C BF 64 B7 65 B6 61 01 B3 04 A8 F0 B7 61 6E 02 A9 6E 04 AA CC FF 5F
 
 [RC6-6-32]
 PID=01 2a
@@ -2742,16 +2857,16 @@ FixedData=A9 00 00 00 00 00
 DefaultCmd=00
 Code.HCS08=20 19 24 4B 61 CE 85 40 08 08 00 DD 00 00 00 00 00 DE 0D D3 05 2D 01 C3 04 CD 02 01 61 09 01 B3 06 B6 61 A8 F0 B7 61 03 61 06 55 7B 35 74 1D A4 B6 66 AE 08 CD FF 8C BF 66 B7 67 6E 02 A9 6E 06 AA CC FF 5F
 
-[Samsung36] 
-PID=01 B5 
-DevParms=Device Number:8=0,Sub Device:8=0,Param E:4=0 
-DeviceTranslator=Translator(lsb,0) Translator(lsb,1,8,8) Translator(lsb,2,4,16,0) 
-CmdParms=OBC 
-CmdTranslator=Translator(lsb,0) 
-DefaultCmd=00 
-CmdIndex=0 
-FixedData=20 00 00 
-Code.S3C80=43 8C 31 8B 12 8F 45 08 04 00 FA 02 CD 00 FA 00 E5 77 6F 08 CF 08 B4 E4 06 07 60 07 F0 05 0C 04 10 07 10 06 10 05 0A F8 20 10 E6 25 11 8D 01 61 
+[Samsung36]
+PID=01 B5
+DevParms=Device Number:8=0,Sub Device:8=0,Param E:4=0
+DeviceTranslator=Translator(lsb,0) Translator(lsb,1,8,8) Translator(lsb,2,4,16,0)
+CmdParms=OBC
+CmdTranslator=Translator(lsb,0)
+DefaultCmd=00
+CmdIndex=0
+FixedData=20 00 00
+Code.S3C80=43 8C 31 8B 12 8F 45 08 04 00 FA 02 CD 00 FA 00 E5 77 6F 08 CF 08 B4 E4 06 07 60 07 F0 05 0C 04 10 07 10 06 10 05 0A F8 20 10 E6 25 11 8D 01 61
 Code.HCS08=20 15 22 48 31 87 45 08 04 00 FA 02 E1 00 FA 00 F9 77 6F 08 CF 08 C8 4E 63 64 33 64 B6 62 62 B7 62 AE 04 39 64 39 63 39 62 5B F8 3C A9 6E 11 7D CC FF 7A
 
 [Scientific Atlanta]
@@ -2890,7 +3005,7 @@ CmdParms=Type:Sony20|Sony12,OBC:7=0
 CmdTranslator=Translator(1,7,lsb) Translator(0,1,7)
 Notes=There are 3 variations of the Sony protocol: Sony12, Sony15 and Sony20 and there are four protocol executors for these in various combinations. \n\
 Examine closely your requirements (and which will require protocol upgrades in YOUR remote) before choosing which one to use. \n\n\
-If there is a subdevice then it has to use Sony20. \n\ 
+If there is a subdevice then it has to use Sony20. \n\
 If there is no subdevice and the device is greater than 31 it has to use Sony15. \n\
 If there is no subdevice and the device is 0 to 31 it almost always uses Sony12 but might use Sony15. \n\
 (NOTE: If you have a decode that shows a sequence of 3 repeats of Sony15 36,96, followed by three Sony8 entries and one more Sony15 entry, you need the Sony DSP protocol) \n\n\
@@ -2921,7 +3036,7 @@ CmdParms=OBC:7,[Sony12 Device]
 CmdTranslator=Translator(lsb,0,7) Sony1220Translator(1)
 Notes=There are 3 variations of the Sony protocol: Sony12, Sony15 and Sony20 and there are four protocol executors for these in various combinations. \n\
 Examine closely your requirements (and which will require protocol upgrades in YOUR remote) before choosing which one to use. \n\n\
-If there is a subdevice then it has to use Sony20. \n\ 
+If there is a subdevice then it has to use Sony20. \n\
 If there is no subdevice and the device is greater than 31 it has to use Sony15. \n\
 If there is no subdevice and the device is 0 to 31 it almost always uses Sony12 but might use Sony15. \n\
 (NOTE: If you have a decode that shows a sequence of 3 repeats of Sony15 36,96, followed by three Sony8 entries and one more Sony15 entry, you need the Sony DSP protocol) \n\n\
