--- a/protocols.ini
+++ b/protocols.ini
@@ -3126,6 +3126,7 @@ FixedData=00 00 00
 CmdParms=OBC:7=0,Device:0|1=0
 CmdTranslator=Translator(lsb,0,7,0) Translator(1,1,7)
 CmdParmInit=PickInitializer(1,0,1)
+ImportCmdTranslator=Translator(0,1,7)
 Code.S3C80=02 02 31 8B 14 F5 15 05 07 02 58 01 18 01 2C 01 18 59 69 04 B3 01 18 00 03 08 05 76 06 01 6B 04 20 01 10 C0 10 C0 FB 03 E6 12 08 8D 01 49
 Code.HCS08=20 17 02 02 31 F5 15 05 07 02 57 01 2C 01 2B 01 2C 59 7D 04 B2 01 2C 00 03 B6 62 01 63 03 3C AC 49 49 24 03 6E 08 6A CC FF 5C
 
@@ -4299,8 +4300,64 @@ Code.HCS08=20 17 22 47 41 8F 44 08 08 00 C1 00 E7 00 C1 02 4D 53 DF 06 5F 03 C3 
 
 [pid: 01 61]
 PID=01 61
-Code.HCS08=20 17 22 47 31 83 80 80 03 08 00 00 98 00 00 00 00 00 A2 97 C9 01 E1 01 E2 B6 62 4E 63 62 B7 63 3C A9 01 63 08 45 17 30 35 A7 CD FF 6E AD 02 1E 61 AD 16 CD FF 86 AE 76 CD FF 65 AE 6C CD FF 68 CD FF 62 CD FF 92 25 EE 81 8C 5F 6E 03 54 B6 63 62 B7 52 E6 60 62 B7 53 62 BB 52 BB 53 B7 52 5C 3B 54 F0 B6 52 A4 0F B7 52 B6 63 A4 F0 BA 52 B7 63 81
+VariantName=1
+Code.S3C80=3D 92 12 8B 16 49 05 08 00 84 01 75 00 84 03 87 \
+           83 C2 00 00 00 00 00 00 03 5F A0 48 05 37 40 06 \
+           28 03 77 26 29 03 0C 05 76 03 01 6B 0D E4 25 1C \
+           E4 26 1D 0C 03 09 12 E6 24 02 18 03 90 C1 0A FC \
+           19 05 A6 0D 02 6B 0B B0 C6 F6 FF 58 37 61 02 7B \
+           F6 AF F6 5E 54 F6 FF 58 B0 C5 60 04 60 05 F6 01 \
+           46 F6 01 0A 7B 02 6C FF 60 C5 EB EE AF
 
+[pid: 01 61]
+PID=01 61
+VariantName=3
+Code.S3C80=43 8B 31 8B 14 83 80 80 03 08 00 00 9E 00 00 00 \
+           00 00 8E 97 B5 01 E2 01 CE 68 05 E4 06 05 69 06 \
+           20 10 37 60 09 E6 0E 2C E6 0F 5D F6 01 55 F6 FF \
+           34 46 04 80 F6 FF 56 F6 01 73 1C 1E F6 01 4C 1C \
+           14 F6 01 64 76 03 C0 EB 02 77 71 F6 01 70 77 70 \
+           F6 01 0A 7B E5 AF B0 C3 4C 03 28 06 F0 C2 87 53 \
+           03 02 25 F0 C5 02 25 3E 4A F4 56 C2 0F 56 06 F0 \
+           44 C2 06 AF
+Code.HCS08=20 17 22 47 31 83 80 80 03 08 00 00 98 00 00 00 \
+           00 00 A2 97 C9 01 E1 01 E2 B6 62 4E 63 62 B7 63 \
+           3C A9 01 63 08 45 17 30 35 A7 CD FF 6E AD 02 1E \
+           61 AD 16 CD FF 86 AE 76 CD FF 65 AE 6C CD FF 68 \
+           CD FF 62 CD FF 92 25 EE 81 8C 5F 6E 03 54 B6 63 \
+           62 B7 52 E6 60 62 B7 53 62 BB 52 BB 53 B7 52 5C \
+           3B 54 F0 B6 52 A4 0F B7 52 B6 63 A4 F0 BA 52 B7 \
+           63 81
+
+[pid: 01 61]
+PID=01 61
+VariantName=5
+Code.S3C80=43 8B 52 8B 16 83 80 80 03 08 00 00 9E 00 00 00 \ 
+           00 00 8E 97 B5 01 E2 01 CE 06 F4 68 09 37 6C 03 \ 
+           E4 05 03 37 6A 03 E4 06 04 18 07 37 10 09 E6 0E \ 
+           2C E6 0F 5D F6 01 55 19 06 E4 08 05 37 6E 3D C4 \ 
+           22 1C B0 04 B0 05 37 60 03 46 03 01 37 62 03 46 \ 
+           03 02 37 69 13 F6 FF A3 F6 FF 8A F6 01 0A 7B FB \ 
+           56 03 FC F6 FF A3 8B 22 37 67 05 E4 08 05 8B 03 \ 
+           E4 08 04 F6 FF A3 F6 FF 8A 7B FB AF F6 FF A3 F6 \ 
+           FF 8A 7B FB 46 04 80 F6 FF A3 1C 1E F6 01 4C 1C \ 
+           14 F6 01 64 76 03 C0 EB 02 77 71 F6 01 70 77 70 \ 
+           8D 01 0A 56 06 F0 B0 C2 3C 04 87 53 02 02 25 F0 \ 
+           C5 02 25 3A F5 56 C2 0F 44 C2 06 E6 10 04 8D 01 \ 
+           73 
+Code.HCS08=20 19 22 47 52 83 80 80 03 08 00 00 98 00 00 00 \ 
+           00 00 A2 97 C9 01 E1 01 E2 07 08 0D 66 03 4E 62 \ 
+           60 0B 66 03 4E 63 61 01 64 08 45 17 30 35 A7 CD \ 
+           FF 6E 4E 64 63 4E 65 62 0F 66 3A 55 7A 35 74 3F \ 
+           61 3F 62 01 66 02 10 60 03 66 02 12 60 08 66 13 \ 
+           AD 3D AD 2B 11 25 CD FF 92 25 F9 11 60 13 60 AD \ 
+           2E 20 1C B6 65 06 66 04 B7 62 20 02 B7 61 AD 1F \ 
+           AD 0D 25 FC 81 AD 18 AD 06 25 FC 1E 61 AD 10 AE \ 
+           76 CD FF 65 AE 6C CD FF 68 CD FF 62 CC FF 92 B6 \ 
+           63 A4 F0 B7 63 3F 52 45 00 04 E6 5F 62 BB 52 EB \ 
+           5F B7 52 5B F5 A4 0F BA 63 B7 63 6E 04 A9 CC FF \ 
+           86
+           
 [pid: 01 6A]
 PID=01 6A
 Code.HCS08=20 15 22 47 11 CF 4D 08 08 01 06 01 1A 01 06 03 53 D2 F6 11 93 08 CE 4E 61 62 33 62 3C AA CC FF 5F
