--- a/protocols.ini
+++ b/protocols.ini
@@ -170,6 +170,7 @@ DevParms=Device=0,Sub Device:5=0
 #                                   parameter 1: lsb, 5 bits, offset 8 (second byte of fixed data)
 DeviceTranslator=Translator(lsb) \
            Translator(lsb,1,5,8)
+DeviceImporter=AiwaDeviceImporter()
 #                               Fixed data is two bytes long
 FixedData=00 00
 #                               Command parameters
@@ -205,6 +206,7 @@ VariantName=2
 DevParms=Device=0,Sub Device:5=0
 DeviceTranslator=Translator(lsb) \
            Translator(lsb,1,5,8)
+DeviceImporter=AiwaDeviceImporter()
 FixedData=00 00
 CmdParms=OBC=0
 CmdTranslator=Translator(lsb)
@@ -233,6 +235,7 @@ VariantName=2
 DevParms=Device=0,Sub Device:5=0
 DeviceTranslator=Translator(lsb) \
            Translator(lsb,1,5,8)
+DeviceImporter=AiwaDeviceImporter()
 FixedData=00 01
 CmdParms=OBC=0
 CmdTranslator=Translator(lsb)
@@ -367,6 +370,16 @@ DeviceTranslator=Translator(0,5)
 FixedData=10
 Notes=official code
 Code.S3C80=3C 8F 11 8B 0F 85 C0 40 05 06 00 DD 10 7C 00 DD 0A 06 38 6B 76 04 01 EB 03 8D 01 46 46 29 01 8D 01 46
+
+[CanalSat] 
+PID=01 8C 
+DevParms=Device:7=11,Sub Device:6=0 
+DeviceTranslator=Translator(0,7,1) Translator(1,6,8) Translator(1,6,16) 
+CmdParms=OBC:7=0 
+CmdTranslator=Translator(0,7) 
+FixedData=8B 00 02 
+Code.HCS08=20 12 17 31 31 8F 80 10 08 07 00 7C 00 83 00 7C 00 83 AD BB 3A A9 4E 62 56 4E 63 62 CD FF 5F CD FF 92 24 08 10 A3 4E 56 61 CC FF 5F 81 
+Code.S3C80=2D 5E 31 8B 0F 8F 80 10 08 07 00 7D 00 6F 00 7D 00 6F AD A7 00 10 68 05 E4 06 05 F6 01 46 F6 01 0A FB 08 46 29 01 69 04 8D 01 46 AF
 
 [Denon]
 PID=00 1C
