--- a/protocols.ini
+++ b/protocols.ini
@@ -1880,9 +1880,11 @@ PID=01 FB
 KeyMovesOnly=1
 CmdParms=Duration:8=0
 CmdTranslator=Translator()
-Code.S3C80=00 00 01 E4 03 C2 C6 C0 00 00 0A FE 1A FC 2A FA AF
-Code.740=00 00 01 A5 5D A0 50 22 42 1A D0 F9 60
-Code.6805-C9=00 00 01 CD 01 92 A6 51 CD 01 9E 3A 50 26 F7 81
+Code.S3C80=00 00 01 28 03 C6 C0 00 00 0A FE 1A FC 2A FA AF 
+Code.HCS08=20 03 00 00 01 A6 F4 AE 29 CD FF A1 3B 60 F6 81 
+Code.6805-RC16/18=00 00 01 CD 01 8F A6 51 CD 01 95 3A 50 26 F7 81 
+Code.6805-C9=00 00 01 CD 01 92 A6 51 CD 01 9E 3A 50 26 F7 81 
+Code.740=00 00 01 A5 5D A0 50 22 42 16 D0 F9 60
 Notes=This protocol allows you to insert a variable length pause inside \
 a macro.  To use this protocol, you have to install both the Device \
 Upgrade and the Protocol Upgrade.\
@@ -1953,7 +1955,6 @@ On the "Buttons" or "Layout" sheet, for each desired pause function, assign it t
 Copy and Paste the Protocol and Device upgrades into IR.  For the Device upgrade, IR will prompt you to assign it to a device button, otherwise the Keymoves won't work. \
 \n\
 It's OK, you need to do this only temporarily.  Select any device button you want.  What you really want is to import the keymoves, and then once they are in IR's Keymove tab, you can re-edit those Pause keymoves to any other button in any other device you want.  The key is to use the same Device for the source of the Keymove.
-
 
 [pid-0001]
 PID=00 01
