--- a/protocols.ini
+++ b/protocols.ini
@@ -1785,7 +1785,7 @@ Code.6805-RC16/18=11 26 32 20 10 8F 45 08 08 00 6C 6D 01 6C 48 48 6F 00 31 67 B4
 Code.HCS08=20 15 23 4A 32 8F 45 08 08 00 D7 00 DC 00 D7 02 91 90 DD 06 CF 03 68 B6 62 B8 63 B8 64 B7 65 3C A9 CC FF 5F
 
 [Panasonic Multi-Device (Hacked)]
-PID=00 42
+PID=01 E1
 OldNames=Panasonic Combo2
 DevParms=Main Device=160,Sub Device=0,OEM Dev1=2,OEM Dev2=32
 DeviceTranslator=Translator(lsb,comp,0,8,16)  \
@@ -3204,17 +3204,16 @@ Code.740=0F 1D 11 80 0C E0 A2 01 10 06 06 03 97 06 E0 4E \
 PID=00 4B
 VariantName=7
 DefaultCmd=00
-DevParms=Device:6=0
+DevParms=Device:4=0
 DeviceTranslator=Translator(lsb,comp,0,4)
 FixedData=00
-CmdParms=OBC:6=0
-CmdTranslator=Translator(lsb,comp,0,6,1) \
-              TranslatorFromDev(comp,0,1,0,5)
+CmdParms=OBC:6=0,Dev:0|1
+CmdTranslator=Translator(lsb,comp,0,6) Translator(comp,1,1,6)
+CmdParmInit=ParmInitializer(1,0,5,1)
 DefaultCmd=00
 Code.S3C80=76 76 11 8B 0E C5 41 05 07 00 F2 03 DC 00 F2 08 \
            BE 9C 40 31 02 27 07 03 31 C2 8D 01 46
 Code.HCS08=20 11 3C 3C 11 C5 41 05 07 00 E5 04 01 00 E5 08 F2 9C 40 01 B3 06 B6 60 A8 08 B7 60 CC FF 5F
-
 
 [TiVo (Advanced)]
 OldNames=TiVo Hacked,Tivo Hacked,Tivo (Advanced)
