Improved XMP protocol support
git-svn-id: svn://svn.code.sf.net/p/controlremote/code/trunk/km@852 bfc585dc-5255-483b-a5ca-a9bf5897b33d

--- a/protocols.ini
+++ b/protocols.ini
@@ -170,7 +170,7 @@ DevParms=Device=0,Sub Device:5=0
 #                                   parameter 1: lsb, 5 bits, offset 8 (second byte of fixed data)
 DeviceTranslator=Translator(lsb) \
            Translator(lsb,1,5,8)
-DeviceImporter=AiwaDeviceImporter()
+Device=AiwaDeviceImporter()
 #                               Fixed data is two bytes long
 FixedData=00 00
 #                               Command parameters
@@ -4588,7 +4588,7 @@ Code.S3C80=47 95 11 8B 13 00 01 97 05 C8 02 A1 01 29 02 4E 00 DB 02 2A 03 7A 04 
 Code.HCS08=20 18 24 4C 11 00 01 89 05 F7 02 93 00 FC 01 1A 02 4C 02 3F 03 9C 00 00 04 8B 01 B3 06 B6 60 A8 40 B7 60 AE 6A CD FF 65 AE 6E CD FF 68 4E 60 53 6E 01 55 AD 1F 4E 53 54 4E 61 53 6E 04 55 AD 14 4E 54 53 6E 03 55 AD 0C 45 70 26 CD FF 74 CD FF 92 25 D0 81 0E 53 19 0C 53 0C AE 7C CD FF 83 AE 76 CD FF 68 20 1F AE 74 AD 23 AE 74 AD 1F 20 15 0C 53 0A AE 70 AD 16 AE 78 AD 12 20 08 AE 78 AD 0C AE 70 AD 08 39 53 39 53 3B 55 C8 81 CD FF 83 AE 72 CD FF 68 81
 
 
-[XMP (JP1)]
+[XMP]
 PID=01 6C
 VariantName=JP1RC
 DevParms=Device=62,Subdevice=16,OEM Code=68, XMP Type=0:XMP-1|XMP-2
@@ -4601,6 +4601,7 @@ DeviceTranslator=Translator(1,4,0,4) \
                  Translator(comp,3,1,49) \
                  XMPsumCheck(BF00,4) \
                  XMPsumCheck(00B0,36)
+DeviceImporter=AddImporter(3,-1)
 FixedData=10 0F 44 3E 00 00 00
 CmdParms=OBC
 CmdTranslator=Translator(0,8,0) 
@@ -4617,7 +4618,8 @@ Code.6805-RC16/18=11 24 71 20 05 00 00 33 BD 61 AD 64 FB 40 BB 5E A4 0F B7 62 A8
                   01 A6 12 CC 01 96 AD 14 F7 A4 0F 4C AE 23 42 AB 9C 24 01 5C \
                   B7_69 BF_67 5F CC 01 CA BE_6A F6 AE 10 42 BF_6B BA_6B BE_6A 81
 
-[XMP (JP1)]
+[XMP]
+OldNames=XMP (JP1)
 PID=01 6C
 VariantName=JP1
 DevParms=Device=62,Subdevice=16,OEM Code=68, Final Frame Toggle:bool, XMP Type=0:XMP-1|XMP-2
@@ -4631,6 +4633,7 @@ DeviceTranslator=Translator(1,4,0,4) \
                  Translator(comp,4,1,49) \
                  XMPsumCheck(BF00,4) \
                  XMPsumCheck(00B0,36)
+DeviceImporter=AddImporter(4,-1)                 
 FixedData=10 0F 44 3E 00 00 00
 CmdParms=OBC
 CmdTranslator=Translator(0,8,0) 
@@ -4680,6 +4683,7 @@ DeviceTranslator=Translator(1,4,0,4) \
                  Translator(comp,4,1,49) \
                  XMPsumCheck(BF00,4) \
                  XMPsumCheck(00B0,36)
+DeviceImporter=AddImporter(4,-1)
 FixedData=10 0F 44 3E 00 00 00
 CmdParms=OBC
 CmdTranslator=Translator(0,8,0) 
@@ -4698,7 +4702,8 @@ Code.S3C80=43 8B 71 8B 05 00 00 69 01 67 08 0A F0 C0 04 0A C0 60 C0 0E 04 07 C0 
            6E 4A F7 1C 12 8D 01 4C F6 FF 67 F1 C6 C7 26 56 C2 0F 6B 09 C6 F8 00 3E F6 \
            01 58 2A F7 AF
 
-[XMP (UEI)]
+[XMP]
+OldNames=XMP (UEI)
 PID=01 6C
 VariantName=2
 DevParms=Device=62,Subdevice=16,OEM Code=68,Final Frame Toggle:bool
