Added Kathrein protocol Fix TiVo (Official 2-byte) Unit Code encoding
git-svn-id: svn://svn.code.sf.net/p/controlremote/code/trunk/km@863 bfc585dc-5255-483b-a5ca-a9bf5897b33d

--- a/protocols.ini
+++ b/protocols.ini
@@ -170,7 +170,7 @@ DevParms=Device=0,Sub Device:5=0
 #                                   parameter 1: lsb, 5 bits, offset 8 (second byte of fixed data)
 DeviceTranslator=Translator(lsb) \
            Translator(lsb,1,5,8)
-Device=AiwaDeviceImporter()
+DeviceImporter=AiwaDeviceImporter()
 #                               Fixed data is two bytes long
 FixedData=00 00
 #                               Command parameters
@@ -1113,6 +1113,20 @@ ImportCmdTranslator=Translator(lsb,comp,0,8,0)
 Code.S3C80=43 8B 02 8B 19 CC D9 80 20 08 08 01 07 00 F4 01 07 03 03 73 50 10 7C 08 2A 00 03 00 59 8C 8D 01 46
 Code.HCS08=20 1C 22 47 02 CC D9 80 20 08 08 01 01 01 08 01 01 03 17 72 42 10 7B 08 3E 00 03 00 5A A9 CC FF 5F
 Notes=This combo protocol is used for setup codes Audio/1374 & TV/065.  Many non-North American market JVC TV's use multiple Device Codes (3, 35, and 15 commonly)
+
+[Kathrein] 
+PID=00 66 
+DevParms=Device:4=0,Restricted Repeat Keys:bool 
+DeviceTranslator=Translator(0,4,lsb,comp) Translator(1,1,7) 
+CmdParms=OBC:8=0 
+CmdTranslator=Translator(0,8,lsb,comp) 
+FixedData=F0 
+Notes=The Kathrein protocol gives a choice of which keys have repeat action.  By default, all keys have repeat \ 
+action but if the Restricted Repeat Keys box is checked then only the Volume, Channel, Rewind and Fast Forward \ 
+keys repeat. 
+Code.S3C80=43 8B 11 8B 12 E5 44 04 08 01 17 01 03 01 17 03 32 D6 52 11 A1 08 A3 F6 01 46 E6 28 C4 76 03 01 6B 06 F6 01 04 7B 01 AF 46 29 01 8D 01 46 
+Code.740=0B 1A 11 80 12 F6 B8 01 15 04 08 01 A8 03 21 6B 33 57 06 AA 02 6B 33 22 00 17 5D 04 22 09 B0 0F A5 77 A6 78 85 71 86 72 3C A0 7E 2F 7F 22 00 60 
+Code.HCS08=20 15 22 47 11 E5 44 04 08 01 0F 01 09 01 0F 03 39 D6 66 11 A0 08 B7 CD FF 5F 6E C4 A2 01 60 06 CD FF 8F 25 01 81 10 A3 CC FF 5F
 
 [Kaseikyo]
 PID=01 C9
@@ -3252,7 +3266,7 @@ Code.HCS08=20 18 22 48 31 CA 5D 08 08 01 16 01 1A 01 16 03 45 D7 56 11 A6 08 CB 
 OldNames=TiVo Official,Tivo Official,Tivo (Official 2-byte)
 PID=01 11
 VariantName=2byte
-CmdTranslator=Translator(lsb,comp,0,8,0) TranslatorFromDev(comp,2,4,8)
+CmdTranslator=Translator(lsb,comp,0,8,0) TranslatorFromDev(lsb,comp,2,4,8)
 CmdParms=OBC=0
 Notes=official version
 DevParms=Main Device=133,Sub Device=48,Unit Code=0:0|1|2|3|4|5|6|7|8
@@ -3681,12 +3695,6 @@ Code.S3C80=00 00 51 8B 01 00 28 00 F0 C2 90 C2 3C 02 F6 FF 39 F6 FF 54 28 07 F6 
 Code.740=00 00 71 A5 63 85 65 44 65 A5 64 85 66 44 66 A5 5A 85 54 82 54 A9 03 85 56 85 58 20 77 01 A2 34 A0 01 22 44 20 5E 01 22 06 90 F9 60 3C 18 58 3C 00 55 A6 55 B5 63 85 54 3C 06 56 20 77 01 E6 55 64 58 D0 EE 60 20 9B 01 20 97 01 20 A4 01 20 A4 01 20 97 01 C6 58 D0 03 4C 35 FF 20 A4 01 06 54 C6 56 D0 E1 60 44 54 10 09 22 35 A4 61 A6 62 4C 44 FF A4 5F A6 60 4C 44 FF
 Code.6805-RC16/18=00 00 41 B6 57 46 46 46 46 AE 02 BF 53 3F 52 5C AD 1E AE 17 BF 53 3F 52 3F 54 B6 5D AD 0C B6 5E AD 08 33 54 26 F4 01 52 E9 81 AE 06 01 54 01 43 B7 50 BF 51 0E 50 10 13 52 AE 01 AD 37 3D 53 27 08 AE 05 AD 2F 20 24 12 52 AE 04 AD 27 3D 53 27 06 AE 02 AD 1F 20 14 CD 01 89 24 02 10 52 AE 01 AD 12 03 52 0E AE 01 AD 0B 20 08 38 50 3A 53 3A 51 26 C1 81 B6 5C 42 BF 15 BE 5B BF 16 B7 17 CD 01 C7 11 14 19 14 81
 Code.HCS08=20 04 00 00 51 00 B6 B3 62 48 AE 02 AD 20 AD 38 B6 64 AD 18 B6 65 AD 14 B6 64 43 AD 0F B6 65 43 AE 05 AD 0A AD 22 CD FF 92 25 E5 81 AE 06 BF 55 B7 56 AD 21 39 56 24 08 AD 22 AD 19 AD 22 20 04 AD 13 AD 16 3B 55 EB 81 AD 0B 0F 56 04 AD 04 20 04 AD 02 AD 07 AE 60 CC FF 65 AD 04 AD 02 AD 00 AE 60 CD FF 83 AE 62 CC FF 83
-
-[pid: 00 66]
-PID=00 66
-Code.S3C80=43 8B 11 8B 12 E5 44 04 08 01 17 01 03 01 17 03 32 D6 52 11 A1 08 A3 F6 01 46 E6 28 C4 76 03 01 6B 06 F6 01 04 7B 01 AF 46 29 01 8D 01 46
-Code.740=0B 1A 11 80 12 F6 B8 01 15 04 08 01 A8 03 21 6B 33 57 06 AA 02 6B 33 22 00 17 5D 04 22 09 B0 0F A5 77 A6 78 85 71 86 72 3C A0 7E 2F 7F 22 00 60
-Code.HCS08=20 15 22 47 11 E5 44 04 08 01 0F 01 09 01 0F 03 39 D6 66 11 A0 08 B7 CD FF 5F 6E C4 A2 01 60 06 CD FF 8F 25 01 81 10 A3 CC FF 5F
 
 [pid: 00 67]
 PID=00 67
